# GalileoOS

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
agents/: pyproject.toml
agents/hello/: __init__.py  main.py
agents/onboarding/: __init__.py  cli.py  connector.py  crawler.py  credentials.py  sources.py  worker.py  workflows.py
agents/onboarding/tests/: test_credentials.py  test_sources.py
deploy/compose/: README.md  docker-compose.yml  otel-collector-config.yaml
deploy/compose/litellm/: config.yaml
deploy/compose/otel-wrapper/: Dockerfile  README.md
deploy/compose/postgres-brain/: Dockerfile  README.md
desktop/: README.md
docs/: galileo_os_infrastructure_plan.md
docs/closeouts/: CLOSEOUT_LAYER3_MIRAGE_RECONSIDERED.md  CLOSEOUT_MCP_PER_SOURCE_RECONSIDERED.md  CLOSEOUT_OPIK_RECONSIDERED.md  CLOSEOUT_STAGE0.md
docs/decisions/: 0001-repo-namespace.md  0002-protection-approval-relaxation.md  0003-mirage-layer-relocation.md  0004-observability-substrate.md  0005-mcp-per-source-vs-mixed.md  0006-stage1-scope-canonical-with-path2-calibration.md
docs/onboarding/: install_walkthrough.md
docs/plans/: STAGE_0_PLAN.md  STAGE_1_PLAN.md
docs/solutions/: SOLUTION_CI_EXPANSION_FINDINGS.md  SOLUTION_CI_GUARD_VERIFICATION.md  SOLUTION_COVERAGE_DRILL_DOWN.md  SOLUTION_DEPENDENCY_COUPLING.md  SOLUTION_DEPENDENCY_SHAPE_VERIFICATION.md
kernel/: go.mod  go.sum
kernel/auth/: jwt.go  jwt_test.go
kernel/cmd/agent-runner/: activity.go  integration_test.go  main.go  registry.go  server.go  workflow.go  workflow_test.go
kernel/cmd/cost-recon/: main.go  recon_test.go
kernel/cmd/gateway/: brain.go  budget.go  cost_events.go  integration_test.go  litellm.go  main.go  migrate.go  otel.go  server.go  tenant.go
kernel/cmd/gateway/migrations/: 0001_tenants.sql  0002_cost_events.sql  0003_tenant_credentials.sql  0004_tenant_manifests.sql  0005_brain.sql
kernel/cmd/jwt-tool/: main.go
kernel/cmd/manifest-check/: main.go  main_test.go
kernel/probe/connector/: README.md  apparatus.go  apparatus_test.go  cache_test.go  errorpaths_test.go  list_test.go  mocks_test.go  oauth_test.go  snapshot_test.go  stat_test.go
kernel/probe/mirage/: README.md  apparatus.go  apparatus_test.go  cache_test.go  errorpaths_test.go  list_test.go  mocks_test.go  oauth_test.go  snapshot_test.go  stat_test.go
mcp-servers/: README.md
mobile/: README.md
schemas/: README.md  buf.gen.yaml
schemas/galileo/v1/: agent_task.proto  brain.proto  tenant.proto
skills/: README.md
web/: .gitignore  eslint.config.mjs  package.json
web/app/: hello-agent.tsx  layout.tsx  page.tsx
web/app/api/tasks/: route.ts
web/app/api/tasks/[id]/: route.ts
web/lib/: api-types.ts
