[project]
name = "galileo-agents"
version = "0.0.0"
description = "Galileo OS Python agents — LangGraph / CrewAI / Agno workers."
requires-python = ">=3.12"
authors = [{ name = "Galileo OS contributors" }]
license = { text = "Apache-2.0" }
# Stage 0 has zero runtime deps; Stage 1 adds LangGraph / CrewAI / Agno.
# Explicit empty list suppresses pip-audit's missing-dependencies warning.
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["onboarding*", "hello*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
